remake FixtureManagementController, add PLayerManagement to PlayerController, fix bug Registration